# OPENAPI-SERVICE

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_create_affiliate_orders.py  003_alter_affiliate_orders.py  e39f40df9c0a_add_created_time_index.py
app/: config.py  database.py  main.py
app/api/v1/: auth.py  daren.py
app/core/excel/: __init__.py  base_parser.py  base_validator.py  daren_parser.py
app/core/exceptions/: handlers.py
app/core/middleware/: logging.py
app/core/security/: auth.py  deps.py
app/models/: affiliate_order.py  api_key.py  base.py
app/schemas/: api_key.py  daren.py  response.py
app/services/: api_key.py  daren.py
docs/api/: authentication.md  error-codes.md  rate-limiting.md
docs/architecture/: overview.md
docs/database/: schema.md
docs/deployment/: env-config.md  setup.md
