[project]
name = "openapi-service"
version = "0.1.0"
description = "OpenAPI Service Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
